@@ -76,7 +76,7 @@ area_size: 14
 // NOTE: You also need to adjust the client if you want this to work.
 // NOTE: Default is 99. Values above 127 will probably behave incorrectly.
 // NOTE: If you don't know what this does, don't change it!!!
-max_lv: 99
+max_lv: 150
 
 // Level required to display an aura.
 // NOTE: This assumes that sending max_lv to the client will display the aura.
@@ -84,7 +84,7 @@ max_lv: 99
 // Example: If max_lv is 99 and aura_lv is 150, characters with level 99~149
 //          will be sent as being all level 98, and only characters with level
 //          150 or more will be reported as having level 99 and show an aura.
-aura_lv: 99
+aura_lv: 150
 
 // Will tuxedo and wedding dresses be shown when worn? (Note 1)
 wedding_modifydisplay: no
