@@ -1371,7 +1371,25 @@
 //-- AB_SECRAMENT
 2515,2000,500,0,0,60000:90000:120000:150000:180000,0
 
-//==== Wanderer/Minstrel skills ============
+//==== Wanderer skills =====================
+//-- WA_SWING_DANCE
+2350,1000,1000,0,0,100000:150000:200000:250000:300000,0
+//-- WA_SYMPHONY_OF_LOVER
+2351,1000,1000,0,0,100000:150000:200000:250000:300000,0
+//-- WA_MOONLIT_SERENADE
+2352,1000,1000,0,0,100000:150000:200000:250000:300000,0
+
+//==== Minstresl skills ====================
+//-- MI_RUSH_WINDMILL
+2381,1000,1000,0,0,100000:150000:200000:250000:300000,0
+//-- MI_ECHOSONG
+2382,1000,1000,0,0,100000:150000:200000:250000:300000,0
+//-- MI_HARMONIZE
+2383,1000,1000,0,0,100000:150000:200000:250000:300000,0
+
+//==== Minstrel/Wanderer skills ============
+//-- WM_METALICSOUND
+2413,0,2000,0,0,10000,0
 //-- WM_REVERBERATION
 2414,1000,500,0,0,8000,0
 //-- WM_DOMINION_IMPULSE
