@@ -1001,18 +1001,18 @@
 2348,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		SR_GENTLETOUCH_REVITALIZE,Gentle Touch - Revitalize
 
 // Wanderer
-2350,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WA_SWING_DANCE,Swing Dance
-2351,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WA_SYMPHONY_OF_LOVER,Symphony of Lovers
-2352,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WA_MOONLIT_SERENADE,Moonlit Serenade
+2350,0,6,4,0,0x3,-1,5,1,yes,0,0,0,magic,0,	WA_SWING_DANCE,Swing Dance
+2351,0,6,4,0,0x3,-1,5,1,yes,0,0,0,magic,0,	WA_SYMPHONY_OF_LOVER,Symphony of Lovers
+2352,0,6,4,0,0x3,-1,5,1,yes,0,0,0,magic,0,	WA_MOONLIT_SERENADE,Moonlit Serenade
 
 // Minstrel
-2381,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		MI_RUSH_WINDMILL,Windmill Rush Attack
-2382,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		MI_ECHOSONG,Echo Song
-2383,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		MI_HARMONIZE,Harmonize
+2381,0,6,4,0,0x3,-1,5,1,yes,0,0,0,magic,0,	MI_RUSH_WINDMILL,Windmill Rush Attack
+2382,0,6,4,0,0x3,-1,5,1,yes,0,0,0,magic,0,	MI_ECHOSONG,Echo Song
+2383,6,6,16,0,0x1,0,5,1,yes,0,0,0,magic,0,	MI_HARMONIZE,Harmonize
 
 // Minstrel/Wanderer
 2412,0,0,0,0,0,0,10,0,no,0,0,0,none,0,		WM_LESSON,Lesson
-2413,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_METALICSOUND,Metallic Sound
+2413,9,6,1,0,0,0,5,1,no,0,0,0,weapon,0,		WM_METALICSOUND,Metallic Sound
 2414,9,6,2,0,0x1,3,5,1,no,0,0,3,misc,0,		WM_REVERBERATION,Reverberation
 2415,0,0,0,0,0,0,5,1,no,0,0,0,weapon,0,		WM_REVERBERATION_MELEE,Reverberation Melee
 2416,0,0,0,0,0,0,5,1,no,0,0,0,magic,0,		WM_REVERBERATION_MAGIC,Reverberation Magic
