@@ -390,6 +390,12 @@ typedef enum sc_type {
 	SC_TEARGAS,
 	SC_MANDRAGORA,
 
+	SC_SWINGDANCE,
+	SC_SYMPHONYOFLOVER,
+	SC_MOONLITSERENADE,
+	SC_RUSHWINDMILL,
+	SC_ECHOSONG,
+	SC_HARMONIZE,
 	SC_DEEPSLEEP,
 	
 	SC_FIREWALK,
